gcc/testsuite/algol68/compile/modules/program-error-no-prio-1.a68
{ dg-modules "module2" }

access Module_2
begin assert (2 // 3 = 5); { dg-error "no priority" }
      skip
end
